feat: add send fake email

--- a/.env
+++ b/.env
@@ -1,5 +1,9 @@
 DB_HOST="localhost"
 DB_PORT=5432
 DB_USER="postgres"
-DB_PASSWORD="password"
+DB_PASSWORD="mypassword"
 DB_NAME="register_transactions"
+MAIL_HOST="smtp.mailtrap.io"
+MAIL_USERNAME="050e7e2127bc03"
+MAIL_PASSWORD="256f9a9621e66b"
+MAIL_PORT=":2525"
