feat: use dockerfile

--- a/.env
+++ b/.env
@@ -1,7 +1,7 @@
-DB_HOST="localhost"
+DB_HOST="database"
 DB_PORT=5432
 DB_USER="postgres"
-DB_PASSWORD="mypassword"
+DB_PASSWORD="password"
 DB_NAME="register_transactions"
 MAIL_HOST="smtp.mailtrap.io"
 MAIL_USERNAME="050e7e2127bc03"
